Scheduler quartz with start and stop
Change-Id: I9e691b6b72ee002b72b6b179ca54d698813a799e
Signed-off-by: Jaya <jaya.bhargavi.kr@sap.com>

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.4.2.RELEASE</version>
 	</parent>
+	
+	<properties>
+        <quartz.version>2.2.3</quartz.version>
+        <java.version>1.8</java.version>
+    </properties>
 
 	<dependencies>
 		<dependency>
@@ -99,11 +104,29 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>${quartz.version}</version>
+        </dependency>
+        
+         <!-- spring's support for quartz -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-tx</artifactId>
+    <version>4.3.6.RELEASE</version>
+</dependency>
+        
+        
 	</dependencies>
 
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
   <build>
 		<finalName>predictivemaintenance</finalName>
 		<plugins>
