--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #DataSourceConfigurations
 spring.datasource.jndi-name=java:comp/env/jdbc/DefaultDB
 
-using.spring.schedulerFactory=true
-
+#using.spring.schedulerFactory=true
+quartz.enabled=true
