Forecast api thru scheduler
Change-Id: I5553457f699b5f0c4d3d7b3f8215adab0b099226
Signed-off-by: Jaya <jaya.bhargavi.kr@sap.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.jndi-name=java:comp/env/jdbc/DefaultDB
 
 #using.spring.schedulerFactory=true
 quartz.enabled=true
+
+samplejob.frequency=60000
